--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
             <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center  ">
-              <a class="mr-5 p-3 text-pink-700"> Home</a>
+              <a class="mr-5 p-3 text-pink-700"> Homee</a>
               <a class="mr-5   text-black"> About</a>
               <a class="mr-5 text-black">Work Process</a>
               <a class="mr-5 text-black">Testimonials</a>
