--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         </p>
 </div>
 
-        <div class="grid  columns-3 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 mx-28  text-center py-20  ">
-          <div class="border-2 bg-white w-40 h-48 rounded-3xl ">
-            <img src="img/work-process-item-01.png" alt="" class="ml-14 mb-5">
+        <div class="grid   sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-6 mx-28  text-center py-20  ">
+          <div class="border-2 bg-white w-40 h-48 rounded-3xl  ">
+            <img src="img/work-process-item-01.png" alt="" class="ml-14 mb-5 ">
             <p>
               <strong>Get Ideas</strong> <br> <br>
               Godard pabst <br> prism fam <br>cliche.
@@ -301,7 +301,7 @@
   </section>
   <section style="background-image: url(img/fun-facts-bg.png);">
     <!-- <div style="background-image: url(img/fun-facts-bg.png); ; height:45vh;"> -->
-      <div class=" mx-48 grid grid-cols-7   sm:grid-cols-4 md:grid-cols-7 ">
+      <div class=" mx-48 grid    sm:grid-cols-4 md:grid-cols-7  ">
         
         <div class="py-20 text-white  ">
   
@@ -429,4 +429,4 @@
       </section>
 </body>
 
-</html> -->
+</html> 
